--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 					</div>
 
 					<div class="col-4">
-						<h1> The Gentleman Wordpress Themes has attitude!</h1>
-						<p> Consectetur lorreto del mar old west sheriff barber shop quartet robot moustache brigadier cardinal richelieu, consectetur graeme souness des lynam cardinal richelieu old west sheriff brigadier lorreto del mar old west sheriff testosterone trophy.</p>
-						<p> Blue oyster bar robot moustache leader of men barber shop quartet sweat irrigator, Bruce forsyth cardinal richelieu middle eastern despot groucho-a-like cesar romero sterling.</p>
-						<div class="boton"> 
+						<h1 class="mgb"> The Gentleman Wordpress Themes has attitude!</h1>
+						<p class="mgb"> Consectetur lorreto del mar old west sheriff barber shop quartet robot moustache brigadier cardinal richelieu, consectetur graeme souness des lynam cardinal richelieu old west sheriff brigadier lorreto del mar old west sheriff testosterone trophy.</p>
+						<p class="mgb"> Blue oyster bar robot moustache leader of men barber shop quartet sweat irrigator, Bruce forsyth cardinal richelieu middle eastern despot groucho-a-like cesar romero sterling.</p>
+						<div class="botonread mgb"> 
 							<a href=""> Read More </a>
 						</div>
 					</div>
@@ -70,8 +70,8 @@
 						<nav>
 							<ul>
 								<li> <a href="" class="txtgray"> Recent Work </a> </li>
-								<li> <a href="" class="txtgray"> Popular Work </a> </li>
-								<li> <a href="" class="txtgray"> All Work </a> </li>
+								<li> <a href="" class="text-gray2"> Popular Work </a> </li>
+								<li> <a href="" class="text-gray2"> All Work </a> </li>
 							</ul>
 						</nav>
 					</div>
@@ -192,8 +192,8 @@
 			<div class="container bgwhite follow">
 				<div class="row">
 					<div class="col-3 follower">
-						<div class="social_twitter larry"></div>
-						<div class="botonf bg-gray"> <a href""> Follow </a> </div>
+						<div> <img src="https://cdn2.iconfinder.com/data/icons/communication-137/164/19-128.png" class="larry"></div>
+						<div class="botonf bg-gray"> <a href=""> Follow </a> </div>
 					</div>
 
 					<div class="col-9 follower fs18">
@@ -210,13 +210,13 @@
 			<section>
 			<div class="container">
 				<div class="row pt1">
-				  	<div class="col-3 text-gray fs18">
+				  	<div class="col-3 text-gray fs18 navfoot">
 				  		<p>The<span class="icono">Gentleman </span> </p>
-				  		<div class="social_twitter icon"></div>
-				  		<div class="social_facebook icon"></div>
-				  		<div class="social_googleplus icon"></div>
-				  		<div class="social_wordpress icon"></div>
-				  		<div class="social_tumbleupon icon"></div>
+				  		<a href=""> <div class="social_twitter icon"></div> </a>
+				  		<a href=""> <div class="social_facebook icon"></div> </a>
+				  		<a href=""> <div class="social_googleplus icon"></div> </a>
+				  		<a href=""> <div class="social_wordpress icon"></div> </a>
+				  		<a href=""> <div class="social_tumbleupon icon"></div> </a>
 
 				  	</div>
 
@@ -224,7 +224,7 @@
 				  		Alpha trion ned flanders leader of men I drink your milkshake, lady magnets handlebar basil fawlty che guevara leader of men dis off-piste flanders luxurious.
 				  	</div>
 
-				  	<div class="col-2 mgb">
+				  	<div class="col-2 navfoot mgb">
 				  		 <nav>
 				  	 		<ul class="floatl">
 				  	 			<li> <a href=""  class="pink"> Web Desing </a> </li>
@@ -281,16 +281,20 @@
 							<h2 class="text-bold mg15 pink"> 1-800-275-2273 </h2>
 						</div>
 
-						<div class="col-3">
+						<div class="col-3 navfoot">
 							<h3 class="text-bold mg15 text-gray2"> Newsletter </h3>
-							<form action="">
-		 						<input type="text" name="Nombre" placeholder="Your Email" placeholder="SEND"> 
-		 						<input type="button" value="SEND" id="boton">
-		 					</form>
-
-							<h6>We do not spam or sell emails.</h6>
-							<h6>We design beautifull wordpress themes.</h6>
-						</div>						
+							<br> <br>
+  								<div class="col-lg-6 mgb">
+    								<div class="input-group">
+      									<input type="text" class="form-control" placeholder="Your Email">
+      									<span class="input-group-btn">
+        										<button class="btn btn-default" type="button">Buscar</button>
+      									</span>
+    								</div>
+ 								</div>
+							<h6 class="text-center mgt">We do not spam or sell emails.</h6>
+							<h6 class="text-center ">We design beautifull wordpress themes.</h6>
+						</div>			
 					</div>
 				</div>
 			</section>
@@ -299,7 +303,7 @@
 				<div class="container text-center text-gray2"> Copyright © 2012 <a href="" class="pink">The Gentleman</a> All rights reserved. W3C standard website. Valid (x)html/css
 				</div>
 			</section>
-			
+
 		</footer>
 	</body>
 </html>
